# spectre-x-axiom

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: storage_4_18.json
configs/test/: account_subquery_for_agg.json  axiom_aggregation1.json  beacon_subquery_for_agg.json  keccak_for_agg.json  keccak_shard_for_agg.json  results_root_for_agg.json  storage_subquery_for_agg.json  subquery_aggregation_for_agg.json  verify_compute_for_agg.json
data/test/: input_account_for_agg.json  input_beacon_for_agg.json
src/: comp_circuit_impl.rs  lib.rs  main.rs  spectre_component.rs  witness.rs
src/beacon_header/: circuit.rs  mod.rs  types.rs
src/tests/: mod.rs  utils.rs
src/utils/: comp_circuit_impl.rs  mod.rs  witness.rs
