[package]
name = "specte-x-axiom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
lazy_static = "1.4.0"
# serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_with = { version = "3.3", features = ["base64"] }
bincode = { version = "1.3.3" }

# misc
log = "0.4"
env_logger = "0.10"
getset = "0.1.2"
ark-std = { version = "0.3.0", features = ["print-trace"] }
anyhow = "1.0"
futures = { version = "0.3" }
hex = "0.4.3"
byteorder = { version = "1.4.3" }
rand = "0.8"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
tokio = { version = "1.33", features = ["macros"] }


# halo2
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", default-features = false, features = [
    "halo2-axiom",
    "display",
    "jemallocator",
] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", default-features = false }
zkevm-hashes = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", default-features = false }
halo2curves = { package = "halo2curves-axiom", version = "0.5" }

# axiom
axiom-eth = { version = "=0.4.0", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false, features = [
    "halo2-axiom",
    "providers",
    "aggregation",
    "evm",
    "display",
] }
axiom-query = { version = "=2.0.14", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false }
axiom-codec = { version = "0.2.0", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false }

# spectre
lightclient-circuits = { version = "=0.1.0", path = "../Spectre/lightclient-circuits" }
spectre-eth-types = { version = "=0.1.0", path = "../Spectre/eth-types", package = "eth-types" }

# ethereum
ethers-core = { version = "=2.0.10" }
ethers-providers = { version = "2.0.10" }

[patch.crates-io]
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "5f1ec833718efa07bbbff427ab28a1eeaa706164" }
# halo2-base = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
# halo2-ecc = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
# zkevm-hashes = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
zkevm-hashes = { path = "../halo2-lib/hashes/zkevm" }

[patch."https://github.com/axiom-crypto/halo2-lib"]
# halo2-base = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
# halo2-ecc = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
# zkevm-hashes = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/zkevm-sha256-builder" }
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
zkevm-hashes = { path = "../halo2-lib/hashes/zkevm" }


[patch."https://github.com/axiom-crypto/axiom-eth"]
axiom-eth = { version = "=0.4.0", path = "../examples/axiom-eth/axiom-eth" }
axiom-query = { version = "=2.0.14", path = "../examples/axiom-eth/axiom-query" }
axiom-codec = { version = "0.2.0", path = "../examples/axiom-eth/axiom-codec" }
