[package]
name = "specte-x-axiom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"

# serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_with = { version = "3.3", features = ["base64"] }

# misc
log = "0.4"
url = "2.2.1"
env_logger = "0.10"
getset = "0.1.2"
ark-std = { version = "0.3.0", features = ["print-trace"] }
anyhow = "1.0"
futures = { version = "0.3" }
hex = "0.4.3"
byteorder = { version = "1.4.3" }
rand = "0.8"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
tokio = { version = "1.33", features = ["macros"] }

# halo2
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.4.1", default-features = false, features = [
    "halo2-axiom",
    "display",
    "jemallocator",
] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.4.1", default-features = false }
zkevm-hashes = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.4.1", default-features = false }
halo2curves = { package = "halo2curves-axiom", version = "=0.5.2" }

# axiom
axiom-eth = { version = "=0.4.0", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false, features = [
    "halo2-axiom",
    "providers",
    "aggregation",
    "evm",
    "display",
] }
axiom-query = { version = "=2.0.14", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false }
axiom-codec = { version = "=0.2.0", git = "https://github.com/axiom-crypto/axiom-eth", default-features = false }

# spectre
lightclient-circuits = { version = "=0.1.0", git = "https://github.com/ChainSafe/Spectre", rev = "83b0bc1b4102657f9b295e2816d494d541cbd004" }
spectre-eth-types = { version = "=0.1.0", package = "eth-types", git = "https://github.com/ChainSafe/Spectre", rev = "83b0bc1b4102657f9b295e2816d494d541cbd004" }
spectre-preprocessor = { version = "=0.1.0", package = "preprocessor", git = "https://github.com/ChainSafe/Spectre", rev = "83b0bc1b4102657f9b295e2816d494d541cbd004" }

# ethereum
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "5f1ec833718efa07bbbff427ab28a1eeaa706164" }
ethers-core = { version = "=2.0.10" }
ethers-providers = { version = "2.0.10" }
ethereum-consensus-types = { git = "https://github.com/ChainSafe/ethereum-consensus-types", branch = "capella" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "f3bff52e9c43866f231ec40c8ab0e34125a8957f" }


[dev-dependencies]
blake3 = { version = "=1.5" }

[patch.crates-io]
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "5f1ec833718efa07bbbff427ab28a1eeaa706164" }
halo2-base = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }
halo2-ecc = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }
zkevm-hashes = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }

[patch."https://github.com/axiom-crypto/halo2-lib"]
halo2-base = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }
halo2-ecc = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }
zkevm-hashes = { git = "https://github.com/timoftime/halo2-lib", branch = "feat/bls12-381_zkevm-sha256-axiom" }


[patch."https://github.com/axiom-crypto/axiom-eth"]
axiom-eth = { version = "=0.4.0", git = "https://github.com/nulltea/axiom-eth", branch = "feat/beacon-subquery" }
axiom-query = { version = "=2.0.14", git = "https://github.com/nulltea/axiom-eth", branch = "feat/beacon-subquery" }
axiom-codec = { version = "=0.2.0", git = "https://github.com/nulltea/axiom-eth", branch = "feat/beacon-subquery" }
